hphp/test/slow/rx/missing_reactivity3.php.expectf
Fatal error: __OnlyRxIfImpl, __OnlyRxIfArgs, and __AtMostRxAsArgs annotations cannot be used without __Rx, __RxShallow, or __RxLocal. in %s/test/slow/rx/missing_reactivity3.php on line 4
